refactor(resetPassword): connect to front-end pages
