# config/router/user.route.js
@@ -9,8 +9,7 @@ route.post("/logout", protect, UserController.logout);
 route.post("/logoutall", protect, UserController.logoutAll);
 route.get("/verify", UserController.verifyAccount);
 route.post("/resetpassword", UserController.requestResetPassword);
-route.get("/resetpassword", UserController.serveResetPasswordPage); //temporary
-route.post("/password", UserController.updatePassword);
+route.put("/password", UserController.updatePassword);
 route.put("/", protect, UserController.update).get("/", protect, UserController.getUser);
 route.get("/suggestions", protect, UserController.getSuggestions);
 
